tests/baselines/reference/ClassAndModuleWithSameNameAndCommonRoot.errors.txt
==== tests/cases/compiler/class.ts (0 errors) ====
    module X.Y {
        export class Point {
            constructor(x: number, y: number) {
                this.x = x;
                this.y = y;
            }
            x: number;
            y: number;
        }
    }
    
==== tests/cases/compiler/module.ts (1 errors) ====
    module X.Y {
        export module Point {
                      ~~~~~
!!! module.ts(2,19): error TS2188: Module 'Point' cannot merge with previous declaration of 'Point' in a different file 'class.ts'.
            export var Origin = new Point(0, 0);
        }
    }
    
==== tests/cases/compiler/test.ts (0 errors) ====
    //var cl: { x: number; y: number; }
    var cl = new X.Y.Point(1,1);
    var cl = X.Y.Point.Origin; // error not expected here same as bug 83996 ?
    
    
==== tests/cases/compiler/simple.ts (0 errors) ====
    class A {
        id: string;
    }
    
    module A {
        export var Instance = new A();
    }
    
    // ensure merging works as expected
    var a = A.Instance;
    var a = new A();
    var a: { id: string };
    